# mimir

./: Cargo.toml  README.md  installer.sh  mimir.py
src/: main.rs
