[package]
name = "mimir"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
anyhow = "1.0"
dirs = "6.0.0"
